# autotude

./: .aiderignore  .editorconfig  .envrc  .gitignore  Justfile  Makefile  README.md  all_goals.sql  build_indexer.hxml  build_tools.hxml  copy_replay.sh  default.nix  environment.yml  haxelib.json  protohx.json  server.sh  shell.nix  thing.java
rl/: .envrc  .gitignore  Justfile  client_config.xml  pyproject.toml  server_benchmark.xml
rl/alti_rl/: __init__.py  bot_server.py  networks.py  online_client.py  paths.py  server_config.py  simple_environments.py
rl/alti_rl/proto/: command_pb2.pyi  game_event_pb2.py  game_event_pb2.pyi  (+7 more)
rl/examples/: pyproject.toml  simple.py
rl/lib/: README.md  pyproject.toml
rl/nb/: check_data.py  fly_randomly.py  fly_with_radar.py  learn_crash.py  learn_crash_linear.py  position_embed.py  test_client.py  view_parquet.py
rl/notebooks/: ball.py  exploring_position.ipynb  fly_randomly.py  fly_with_radar.py  learn_dynamics.py  learn_q.py  pyproject.toml  ratings.out  ratings.py  reward_to_go.py  reward_to_go_2.py  reward_to_go_3.py  show_random_trajectories.py  test_client.py  testing.ipynb  use_q.py  use_q_2.py  use_q_3.py
rl/viewer/: app.py  pyproject.toml
rust_src/: Cargo.toml  Dockerfile  Justfile  README.md  build.rs  illum_games  plane_names.csv  players.txt  some_players.csv  test.db  test2.db
rust_src/schema/: data.sql  views.sql
rust_src/sql/: ballhoggers.sql  crashes.sql  goals.sql  kickoff_advantage.sql  kickoff_hogs.sql  kills.sql  ladder_players.sql  map_outcomes.sql  messages.sql  outcomes_by_team.sql  perk winrate (red) by player.sql  plane winrate by player.sql  player_goals.sql  player_kickoffs.sql  players.sql  replays.sql  show_chat.sql  symmetry_by_map.sql  team_kills.sql
rust_src/src/: alti-index.rs  lib.rs  listener.rs  main.rs  replay.rs
stats_db/: .envrc  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  materialize_stats.py  schema.sql  show-errors.sh
stats_db/csv/: broken_replays.csv  custom_handles.csv  named_players.csv  perk_names.csv  stat_order.csv
stats_db/misc/: find_tk.sql  kickoff_advantage.sql  kickoff_hogs.sql  kills.sql  ladder_players.sql  longest_goals.sql  map_goals.sql  map_outcomes.sql  maps.sql  nickname_info.sql  perk winrate (blue).sql  perk winrate (green).sql  perk winrate (red) by player.sql  perk winrate (red).sql  plane winrate by player.sql  plane winrate.sql  player_goals.sql  player_kickoffs.sql  players.sql  team_kills.sql  wtf.sql
stats_db/src/: lib.rs  listener.rs  replay.rs
stats_db/stats/: _avg_duration.sql  _games.sql  _goals.sql  _kills.sql  _messages.sql  _players.sql  _time.sql  _total_games.sql  _total_goals.sql  _total_hours.sql  _total_kills.sql  _total_messages.sql  _total_players.sql  _total_size.sql  _total_time.sql  _vapors.sql  h_games.sql  h_players.sql  h_time.sql  hp_games.sql  p_death_rate.sql  p_goal_rate.sql  p_goals.sql  p_hours.sql  p_kd.sql  p_kill_bc_rate.sql  p_kill_rate.sql  p_kills.sql  p_life_expectancy.sql  p_possession.sql  p_possession_goal_rate.sql  p_possession_goals.sql  p_team_kills.sql  p_time.sql  p_time_alive.sql  p_time_played.sql  p_total_games.sql  p_total_goals.sql  p_total_kills.sql  p_total_time.sql  (+4 more)
stats_db/tables/: game_stats.sql  games.sql  goals_wide.sql  handles.sql  ladder_games.sql  players_short.sql  players_wide.sql  replays_wide.sql  teams.sql  time_alive.sql  vapors.sql
stats_db/views/: game_meta.sql  game_teams.sql  games_wide.sql  handle_nicks.sql  handles.sql  kill_tallies.sql  ladder_games.sql  ladder_games_dvd.sql  last_played.sql  loadouts.sql  monthly_activity.sql  named_kills.sql  names.sql  other_nicks.sql  players_handles.sql  players_wide.sql  primary_planes.sql  time_alive.sql  time_bins.sql  used_planes.sql
stats_db/wide_tables/: players_wide.sql  replays_wide.sql
(+439 files in other folders)
