[project]
name = "altitude-rl"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gymnasium>=1.0",
    "matplotlib>=3.10.6",
    "mypy-protobuf>=3.6.0",
    "polars>=1.35.2",
    "protobuf>=5.28.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.2",
    "simple-parsing>=0.1.7",
    "surgeon-pytorch>=0.0.4",
    "tqdm>=4.67.1",
    "vandc>=0.1.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alti_rl"]
