[package]
name = "alti-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index"
path = "bin/index.rs"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
duckdb = { version = "1.1.1", features = ["bundled"] }
chrono = "0.4"
walkdir = "2.4"
flate2 = "1.0"
anyhow = "1.0"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
prost-build = "0.12"
