[package]
name = "alti-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index"
path = "bin/index.rs"

[[bin]]
name = "index-lite"
path = "bin/index-lite.rs"

[[bin]]
name = "index-stats"
path = "bin/index-stats.rs"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
chrono = "0.4"
walkdir = "2.4"
flate2 = "1.0"
anyhow = "1.0"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
sqlite = "0.36.2"

[build-dependencies]
prost-build = "0.12"
