[package]
name = "alti-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index-lite"
path = "bin/index-lite.rs"

[[bin]]
name = "dump"
path = "bin/dump.rs"

[[bin]]
name = "dump-parquet"
path = "bin/dump-parquet.rs"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
chrono = "0.4"
walkdir = "2.4"
flate2 = "1.0"
anyhow = "1.0"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
sqlite = "0.36.2"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
threadpool = "1.8.1"
arrow = "53"
parquet = "53"

[build-dependencies]
prost-build = "0.12"
