[project]
name = "rl"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "altitude-rl",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab-vim>=4.1.4",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "torch==2.2.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]

[tool.uv.sources]
altitude-rl = { path = "../lib", editable = true }
